--- a/.github/workflows/CI_CD_PIPELINE.yml
+++ b/.github/workflows/CI_CD_PIPELINE.yml
@@ -55,16 +55,28 @@ jobs:
           # Loop through each command and run it
           for command in "${commands[@]}"; do
             echo "Running command: $command"
-            if execute_snow_sql "$command"; then
+            output=$(execute_snow_sql "$command")
+            exit_status=$?
+
+            if [ $exit_status -eq 0 ]; then
               echo "Command succeeded."
             else
-              echo "Command failed: $command. Continuing to next command..."
+              echo "Command failed: $command. Error: $output"
+              echo "Continuing to next command..."
+
+              # Checkout the last committed version of the SQL script
               echo "Checking out last committed version of the SQL_SCRIPT.SQL..."
               git checkout HEAD~1 --force
 
               # Attempt to execute the last committed version of the script
               last_command="USE DATABASE CI_CD_DEMO; USE SCHEMA DEMO_SCHEMA; EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/SQL_SCRIPT.SQL;"
               echo "Executing previous version: $last_command"
-              execute_snow_sql "$last_command"
+              output=$(execute_snow_sql "$last_command")
+              if [ $? -eq 0 ]; then
+                echo "Previous version of SQL_SCRIPT.SQL executed successfully."
+              else
+                echo "Failed to execute previous version of SQL_SCRIPT.SQL. Error: $output"
+                exit 1  # Exit with failure if the fallback also fails
+              fi
             fi
           done
